Thu Sep  2  9:03:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSTask.m: exec process with argv[0] set to full path of
	the executable rather than just the program name.

Tue Aug 31 15:47:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSTimer.m: Set minimum timeout to 0.01s rather than 1.0s.
        This seems a more reasonable value - a 1 second delay is too big.

Wed Aug 25 17:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fixes for memory leak in property-list parsing and in NSTimeZone
	merged in from dawn.

Wed Aug 25 11:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Makefile.postamble: Added rules to build some files without
	optimisation, to avoid optimiser breaking them.

Sat Aug 21  6:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: Fix for probing for other gdomap processes on the
	net.

Fri Aug 20 16:17:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * NSNotificationQueue.m: notifyIdle() fix to send ASAP notifications
        even when no idle notifications are waiting.

1999-08-19  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSObjCRuntime.m: patch from Tim Bissell to help in
	debugging. (show which non-existant ivar you wanted.)

Tue Aug  3 12:36:54 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Source/NSInvocation.m (-initWithTarget:selector:): Hack for
	sparc and ppc machines to align structs on word boundaries.
	* mframe/sparc/solaris2.6: New file with fix for putting small
	structures at correct offset.

Mon Aug  2  8:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/propList.h: parseQuotedString() fix for parsing octal escape
	sequences - hope it's right now.

Sun Aug  1  7:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: ([+localizedStringForKey:value:table:]) Fixed so